Change-Id: I4ff6ac5fde396f761c2ca12de5c2054631bf4771 Signed-off-by: jelf <353742991@qq.com>

--- a/chat/css/style.css
+++ b/chat/css/style.css
@@ -439,14 +439,12 @@ body {
 	.ui .chat {
 		width: 100%;
 	}
-	.ui #text {
-		max-height: 50px;
-	}
 	.ui .write-form textarea {
 		margin: 0px 1% 5px 1%;
+		height: 40%;
 	}
 	.ui .messages {
-		height: calc(100% - 70px - 65px);
+		height: calc(100% - 70px - 15%);
 	}
 	.ui .send{
 		display: none;
