--- a/chat/css/style.css
+++ b/chat/css/style.css
@@ -4,15 +4,14 @@
 	padding: 0;
 }
 
-html,
-body {
+html, body {
 	height: 100vh;
 }
 
 body {
 	overflow: hidden;
 	font-family: "微软雅黑", 'Open Sans', sans-serif;
-	background-color: #fff;
+	background-color: #ececec !important;
 }
 
 .ui {
@@ -59,7 +58,7 @@ body {
 	color: #fff;
 }
 
-.ui .slide-nav {
+.ui .slide-friend {
 	width: 20%;
 	box-sizing: content-box;
 	padding-right: 1%;
@@ -69,7 +68,7 @@ body {
 }
 
 .ui .chat {
-	width: 80%;
+	width: 100%;
 	height: 100%;
 	background: #f9f9f9;
 }
@@ -103,11 +102,10 @@ body {
 	vertical-align: 25px;
 }
 
-.ui .avatar> img,
-.ui .list-friends img {
+.ui .avatar>img, .ui .list-friends img {
 	border-radius: 50%;
-	border: 3px solid #696c75;
-	vertical-align: initial;
+	border: 3px solid #c9d9fb;
+	vertical-align: inherit;
 	width: 50px;
 	height: 50px;
 }
@@ -115,7 +113,7 @@ body {
 .ui #list-friends-box {
 	list-style: none;
 	font-size: 13px;
-	height: 88%;
+	height: 100%;
 	overflow: scroll;
 	overflow-x: hidden;
 }
@@ -130,21 +128,36 @@ body {
 	border-radius: 5px;
 }
 
+.ui .list-friends {
+	padding-top: 5px;
+}
+
 .ui .list-friends img {
 	margin: 5px;
 }
 
-.ui .list-friends> li {
+.ui .list-friends>li {
+	position: relative;
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	margin: 0 0 10px 10px;
+	padding: 5px 0px 5px 10px;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 	cursor: pointer;
+	background-color: #434753;
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+	-o-transition: all .5s;
+	transition: all .5s;
+	display: -webkit-box;
+}
+
+.ui .list-friends>li:hover {
+	background-color: #2f323a;
 }
 
 .ui .list-friends .info {
@@ -165,8 +178,7 @@ body {
 	color: #a8adb3;
 }
 
-.ui .list-friends .off:after,
-.ui .list-friends .on:after {
+.ui .list-friends .off:after, .ui .list-friends .on:after {
 	content: '';
 	left: -12px;
 	top: 8px;
@@ -186,45 +198,65 @@ body {
 
 .ui .top {
 	height: 70px;
+	box-shadow : 0px 3px 5px #ccc;
 }
 
-.ui .messages {
-	height: calc(100% - 70px - 200px);
-	list-style: none;
-	border: 2px solid #fff;
-	border-left: none;
-	border-right: none;
+.ui #list-messages-box {
 	overflow: scroll;
 	overflow-x: hidden;
 }
 
-.ui .messages::-webkit-scrollbar {
-	width: 5px;
-	height: 5px;
+.ui .messages {
+	list-style: none;
 }
 
-.ui .messages::-webkit-scrollbar-track {
+.ui #list-messages-box::-webkit-scrollbar {
+	width: 6px;
+	cursor: pointer;
+}
+
+.ui #list-messages-box::-webkit-scrollbar-track {
 	background: #f3f3f3;
 }
 
-.ui .messages::-webkit-scrollbar-thumb {
+.ui #list-messages-box::-webkit-scrollbar-thumb {
 	background: #A0D3E4;
 	border-radius: 5px;
 }
 
-.ui .messages ._mCS_1 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+.ui .messages ._mCS_1 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
+	{
+	
 }
 
-.ui .messages ._mCS_2 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+.ui .messages ._mCS_2 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
+	{
+	
 }
 
-.ui .messages ._mCS_3 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+.ui .messages ._mCS_3 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
+	{
+	
 }
 
 .ui .messages li {
 	margin: 10px;
 	-webkit-transition: all .5s;
 	transition: all .5s;
+}
+
+.ui .messages .friend-message {
+	animation: leftMessageUpdate 1s;
+	-moz-animation: leftMessageUpdate 1s;
+	-webkit-animation: leftMessageUpdate 1s;
+	-o-animation: leftMessageUpdate 1s;
+}
+
+.ui .messages .i {
+	animation: rightMessageUpdate 1s;
+	-moz-animation: rightMessageUpdate 1s;
+	-webkit-animation: rightMessageUpdate 1s;
+	-o-animation: rightMessageUpdate 1s;
 }
 
 .ui .messages li:after {
@@ -260,7 +292,7 @@ body {
 	color: #fff;
 	font-size: 15px;
 	border-radius: 3px;
-	padding: 20px;
+	padding: 10px;
 	line-height: 25px;
 	max-width: 90%;
 	word-wrap: break-word;
@@ -272,14 +304,14 @@ body {
 	position: absolute;
 	width: 0px;
 	height: 0px;
-	top: -12px;
-	border-bottom: 12px solid #62bf6e;
-	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;
+	top: -10px;
+	border-bottom: 10px solid #62bf6e;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
 }
 
 .ui .messages li.friend-message .name {
-	margin-left: 20px;
+	margin: 0px 10px 0px 20px;
 }
 
 .ui .messages li.friend-message .name:after {
@@ -294,7 +326,7 @@ body {
 }
 
 .ui .messages li.friend-message .message:before {
-	left: 16px;
+	left: 5px;
 	border-bottom-color: #62bf6e;
 }
 
@@ -303,7 +335,7 @@ body {
 }
 
 .ui .messages li.i .name {
-	margin-right: 20px;
+	margin: 0px 20px 0px 10px;
 }
 
 .ui .messages li.i .name:after {
@@ -318,7 +350,7 @@ body {
 }
 
 .ui .messages li.i .message:before {
-	right: 16px;
+	right: 5px;
 	border-bottom-color: #7bc4ef;
 }
 
@@ -326,7 +358,7 @@ body {
 	height: 30%;
 }
 
-.ui .write-form textarea {
+.ui .write-form #text {
 	height: 30%;
 	margin: 20px 1%;
 	width: 98%;
@@ -337,13 +369,13 @@ body {
 	resize: none;
 }
 
-.ui .write-form textarea:before {
+.ui .write-form #text:before {
 	content: '';
 	clear: both;
 }
 
-.ui .avatar> img {
-	border-color: #62bf6e;
+.ui .avatar>img {
+	border-color: #c9d9fb;
 	margin: 10px;
 	margin-right: 5px;
 }
@@ -360,12 +392,10 @@ body {
 	padding: 0px 12px;
 }
 
-
 /*.ui .send:hover {
 	color: #ffffff;
 	background-color: #2d5673;
 }*/
-
 .ui i.fa-file-o {
 	margin-left: 15px;
 }
@@ -395,17 +425,102 @@ body {
 	border-radius: 5px;
 }
 
-.slide-nav-body {
+.slide-friend-body {
 	height: 100%;
+	padding: 20px 0;
 }
 
-@media (max-width: 961px) {
-	.ui .slide-nav {
+.unread {
+	position: absolute;
+	background-color: #ce2f00;
+	width: 25px;
+	border-radius: 50%;
+	color: #fff;
+	text-align: center;
+	line-height: 25px;
+	top: -3px;
+	left: 8px;
+}
+
+.myAlertBox {
+	position: fixed;
+	top: 10px;
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+}
+
+.myAlert {
+	position: relative;
+	top: 10px;
+	margin: 5px auto;
+	left: 0;
+	right: 0;
+	text-align: center;
+	background-color: #ec9336;
+	border-radius: 10px;
+	padding: 20px 20px 20px 55px;
+	color: #fff;
+	z-index: 9999;
+	max-width: 250px;
+	box-shadow: 0px 0px 10px #e27f2b;
+	right: 0;
+}
+
+.myAlertShow {
+	animation: myAlertShow 1s;
+	-moz-animation: myAlertShow 1s;
+	-webkit-animation: myAlertShow 1s;
+	-o-animation: myAlertShow 1s;
+}
+
+.myAlertHidden {
+	animation: myAlertHidden 1s;
+	-moz-animation: myAlertHidden 1s;
+	-webkit-animation: myAlertHidden 1s;
+	-o-animation: myAlertHidden 1s;
+}
+
+.myAlertText {
+	
+}
+
+.myAlertImg {
+	position: absolute;
+	left: 20px;
+	top: 15px;
+	border-radius: 50%;
+	border: 1px solid #fdeec0;
+}
+
+.myAlertClose {
+	position: absolute;
+	right: 8px;
+	top: 5px;
+	cursor: pointer;
+}
+
+.myAlertProgress {
+	position: absolute;
+	height: 3px;
+	width: 96%;
+	background-color: #10a7ca;
+	bottom: 6px;
+	left: 2%;
+	border-radius: 10px;
+}
+
+.mCSB_inside>.mCSB_container {
+	margin-right: 5px !important;
+}
+
+@media ( max-width : 961px) {
+	.ui .slide-friend {
 		width: 40%;
 		position: fixed;
 		left: -41%;
 	}
-	.slide-nav-button {
+	.slide-friend-button {
 		width: 30px;
 		height: 40px;
 		position: absolute;
@@ -415,7 +530,7 @@ body {
 		border-top-right-radius: 5px;
 		border-bottom-right-radius: 5px;
 	}
-	.slide-nav-button-top {
+	.slide-friend-button-top {
 		border-top: 3px solid #fff;
 		width: 20px;
 		position: absolute;
@@ -430,7 +545,7 @@ body {
 		/* Safari 和 Chrome */
 		-o-transform: rotate(45deg);
 	}
-	.slide-nav-button-bottom {
+	.slide-friend-button-bottom {
 		border-top: 3px solid #fff;
 		width: 20px;
 		position: absolute;
@@ -445,17 +560,48 @@ body {
 		/* Safari 和 Chrome */
 		-o-transform: rotate(-45deg);
 	}
+	.ui #list-messages-box {
+		height: calc(100% - 70px - 15%);
+		margin-top: 5px;
+	}
+	.ui .write-form #text {
+		height: 30%;
+		margin: 5% 1%;
+		width: 98%;
+		outline: none;
+		padding: 15px;
+		border: none;
+		border-radius: 3px;
+		resize: none;
+	}
 	.ui .chat {
 		width: 100%;
+	}
+	.ui .write-form {
+		height: 30%;
 	}
 	.ui .write-form textarea {
 		margin: 0px 1% 5px 1%;
 		height: 40%;
 	}
-	.ui .messages {
-		height: calc(100% - 70px - 15%);
-	}
 	.ui .send {
 		display: none;
+	}
+}
+
+@media ( min-width : 1200px) {
+	.ui {
+		width: 800px;
+		height: 800px;
+		margin: 30px auto;
+		box-shadow: 0px 0px 15px #7bc4ef;
+	}
+	.ui .write-form {
+		height: 200px;
+	}
+	.ui #list-messages-box {
+		height: 570px;
+		margin-right: 5px;
+		margin-top: 5px;
 	}
 }
